crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__range_suppressions_preview.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
E741 Ambiguous variable name: `I`
  --> suppressions.py:18:5
   |
16 |     # Neither warning is ignored, and an "unmatched suppression"
17 |     # should be generated.
18 |     I = 1
   |     ^
19 |     # ruff: enable[E741, F841]
   |

F841 [*] Local variable `I` is assigned to but never used
  --> suppressions.py:18:5
   |
16 |     # Neither warning is ignored, and an "unmatched suppression"
17 |     # should be generated.
18 |     I = 1
   |     ^
19 |     # ruff: enable[E741, F841]
   |
help: Remove assignment to unused variable `I`
15 | def f():
16 |     # Neither warning is ignored, and an "unmatched suppression"
17 |     # should be generated.
   -     I = 1
18 +     pass
19 |     # ruff: enable[E741, F841]
20 | 
21 | 
note: This is an unsafe fix and may change runtime behavior

F841 [*] Local variable `I` is assigned to but never used
  --> suppressions.py:26:5
   |
24 |     # the other logged to the user.
25 |     # ruff: disable[E741]
26 |     I = 1
   |     ^
27 |     # ruff: enable[E741]
   |
help: Remove assignment to unused variable `I`
23 |     # One should be ignored by the range suppression, and
24 |     # the other logged to the user.
25 |     # ruff: disable[E741]
   -     I = 1
26 +     pass
27 |     # ruff: enable[E741]
28 | 
29 | 
note: This is an unsafe fix and may change runtime behavior

F841 [*] Local variable `l` is assigned to but never used
  --> suppressions.py:35:5
   |
33 |     # middle line should be completely silenced.
34 |     # ruff: disable[E741]
35 |     l = 0
   |     ^
36 |     # ruff: disable[F841]
37 |     O = 1
   |
help: Remove assignment to unused variable `l`
32 |     # lines should each log a different warning, while the
33 |     # middle line should be completely silenced.
34 |     # ruff: disable[E741]
   -     l = 0
35 |     # ruff: disable[F841]
36 |     O = 1
37 |     # ruff: enable[E741]
note: This is an unsafe fix and may change runtime behavior

E741 Ambiguous variable name: `I`
  --> suppressions.py:39:5
   |
37 |     O = 1
38 |     # ruff: enable[E741]
39 |     I = 2
   |     ^
40 |     # ruff: enable[F841]
   |

F841 [*] Local variable `I` is assigned to but never used
  --> suppressions.py:47:5
   |
45 |     # logged to user
46 |     # ruff: disable[E501]
47 |     I = 1
   |     ^
48 |     # ruff: enable[E501]
   |
help: Remove assignment to unused variable `I`
44 |     # Neither of these are ignored and warnings are
45 |     # logged to user
46 |     # ruff: disable[E501]
   -     I = 1
47 +     pass
48 |     # ruff: enable[E501]
49 | 
50 | 
note: This is an unsafe fix and may change runtime behavior

E741 Ambiguous variable name: `I`
  --> suppressions.py:47:5
   |
45 |     # logged to user
46 |     # ruff: disable[E501]
47 |     I = 1
   |     ^
48 |     # ruff: enable[E501]
   |

RUF100 [*] Unused `noqa` directive (unused: `E741`, `F841`)
  --> suppressions.py:55:12
   |
53 |     # and an unusued noqa diagnostic should be logged.
54 |     # ruff:disable[E741,F841]
55 |     I = 1  # noqa: E741,F841
   |            ^^^^^^^^^^^^^^^^^
56 |     # ruff:enable[E741,F841]
   |
help: Remove unused `noqa` directive
52 |     # These should both be ignored by the range suppression,
53 |     # and an unusued noqa diagnostic should be logged.
54 |     # ruff:disable[E741,F841]
   -     I = 1  # noqa: E741,F841
55 +     I = 1
56 |     # ruff:enable[E741,F841]
